--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <script src="https://cdn.socket.io/4.8.0/socket.io.min.js"
+    integrity="sha384-OoIbkvzsFFQAG88r+IqMAjyOtYDPGO0cqK5HF5Uosdy/zUEGySeAzytENMDynREd"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <h1>SocketIo</h1>
+</body>
+<script src="/socket.io/socket.io.js"></script>
+<script>
+  const socket = io()
+  socket.on('message', (data) => {
+    console.log(data)
+  })
+  socket.emit('mess', 'heyyaaaaaa')
+
+</script>
+
 </html>
