--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
 </body>
 <script src="/socket.io/socket.io.js"></script>
 <script>
-  const socket = io()
+  const socket = io('/hello')
   socket.on('broadcast', (data)=>{
     document.body.innerHTML = '';
     document.write(data);
